add variables + menu burger header

--- a/assets/css/src/_var.scss
+++ b/assets/css/src/_var.scss
@@ -1,2 +1,3 @@
-// $red: rgb(184, 90, 90);
-// $blue: rgb(61, 61, 240);
+$bg-body: hsla(183, 100%, 32%, 0.26);
+$blue-noir: #122940;
+$blue-fonce: #004F73;
