add click effect main-menu

--- a/assets/css/src/_var.scss
+++ b/assets/css/src/_var.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:ital@1&display=swap');
+
+
 $bg-body: hsla(183, 100%, 32%, 0.26);
 $blue-noir: #122940;
 $blue-fonce: #004F73;
+$bg:#BDE5E7;
+$title: 'Montserrat', sans-serif;
+$txt: 'Roboto', sans-serif;
