--- a/assets/css/src/_header.scss
+++ b/assets/css/src/_header.scss
@@ -1,38 +1,30 @@
 body{
     background-color: $bg-body;
 }
-
 .logo{
     text-align: center;
     img{
         width: 200px;
     }
 }
-
 .main-header{
     display: flex;
     justify-content: center;
     align-self: center;
     color: aliceblue;
     padding: 20px 10px;
-    
-    
     .burger-bar{
         padding: 25px;
-        
         &:hover{
             cursor: pointer;
         }
-
         .first-line{
             width: 35px;
             height: 3px;
             background-color: $blue-fonce;
             margin: 6px 0px ;
             transition: 0.6s;
-        
         }
-    
         .second-line{
             width: 35px;
             height: 3px;
@@ -40,7 +32,6 @@ body{
             margin: 6px 0px ;
             transition: 0.6s;
         }
-    
         .third-line{
             width: 35px;
             height: 3px;
@@ -49,51 +40,36 @@ body{
             transition: 0.6s;
         }
     }
-
     .change-first-line{
-
-        
             -webkit-transform: rotate(-45deg) translate(-8px, 4px);
             transform: rotate(-45deg) translate(-8px, 4px);
             background-color: $blue-noir !important ;
-
     }
-
 
     .change-second-line {
         opacity: 0;
     }
 
-
     .change-third-line {
         -webkit-transform: rotate(45deg) translate(-7px, -5px);
-        transform: rotate(45deg) translate(-7px, -5px);
-        
+        transform: rotate(45deg) translate(-7px, -5px);  
     }
-
-    
 }
 
 .main-menu{
     text-align: center;
-    visibility: hidden;
+    display: none;
     font-family: $title;
     font-size: 24px;
     background-color: $blue-noir;
     border-radius: 0px 0px 50px 50px;
-    padding: 5px 0px;
-    
-    
-    
+    padding: 5px 0px;    
     li{
         padding: 5px 0px;
     }
-    
     a{
         color: $bg;
-        
     }
-
     .first-menu{
         li{
             margin: 10px 0px;
@@ -102,19 +78,15 @@ body{
                     text-decoration: underline;
                 }
                }
-
             .second-menu{
                 font-family: $txt;
                 font-size: 16px;
                 li{
                     padding: 5px;
-
                     a{
-
                         &:hover{
                             color:rgb(0, 155, 163);
-                            text-decoration: none !important;
-                            
+                            text-decoration: none !important;   
                         }
                     }
                 }
@@ -124,12 +96,9 @@ body{
 }
 
 .main-menu-show{
-    visibility: visible; 
-    
-    
-
-    
+    display: block; 
 }
+
 /*===================================MEDIA QUERIES====================================================================================
 ================================================================================================================================*/
 @media screen and (min-width: 768px) {
@@ -138,57 +107,48 @@ body{
         justify-content: center;
         align-items: center;
     }
-     
-     .burger-bar{
+    .burger-bar{
          display: none;
          transition: 0;
-     }
- 
- 
-     .main-menu{
-         visibility: visible;
-         border-radius: 0px;
-         background-color: transparent;
-         
-         
- 
-     .first-menu a{color: $blue-noir;
-    display: inline;}
- 
-     .second-menu{display: none;
-    transition: 0.6s;
-transform: scale(0);}
+    }
+    .main-menu{
+        display: block;
+        border-radius: 0px;
+        background-color: transparent;
 
-   #portfolio:hover .second-menu{
+    .first-menu a{
+        color: $blue-noir;
+        display: inline;
+    }    
+    .second-menu{
+        display: none;
+        transition: 0.6s;
+        transform: scale(0);
+    }
+    #portfolio:hover .second-menu{
          display: block;
          transition: 0.6s;
          position:absolute ;
          margin: 10px 0;
          left: 50%;
          transform: translate(-50% );
-    
          li{
              display: block;
              margin: 0;
-             
              a{
                  display: block; 
                  font-size: 20px;
              }
          }  
-     }
-     
-
-     li{
+    }
+    li{
          display: inline;
          margin: 0;
          padding: 0;
-     
          a{
-             padding: 10px;
-         }  
-   }
- 
+             padding: 3px;
+        }  
+    }
  }}
 
 @media screen and (min-width: 992px) {
@@ -196,34 +156,19 @@ transform: scale(0);}
        position: absolute;
        left: 50px;
    }
-    
     .burger-bar{
         display: none;
         transition: 0;
     }
-
-
     .main-menu{
-        visibility: visible;
+        display: block;
         border-radius: 0px;
         background-color: transparent;
         padding: 20px;
-        
-        
-
     .first-menu a{color: $blue-noir;}
-
-    
-    
-
     li{
         display: inline;
         margin: 0;
         padding: 0;
-    
-        a{
-            padding: 10px;
-        }  
   }
-
 }}
