--- a/assets/css/src/_project.scss
+++ b/assets/css/src/_project.scss
@@ -17,7 +17,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50% , -90%);
-        color: $blue-fonce;
+        color: $bg;
         font-family: $title;
         font-size: 26px;
     }
@@ -36,8 +36,11 @@
 .author-photo{
     margin-bottom: 10px;
     border-radius: 100%;
-    width: 100%;
+    width: 246px;
     height: 246px;
+    display: block;
+    margin: auto;
+    
 }
 
 .author-description{
@@ -84,8 +87,14 @@
 }
 /*=============================================MEDIA QUERIES==================================================================================
 =============================================================================================================================================*/
+
+/*======================================================================768==========================================================================================================================================================================================================================*/
+
+
+
 @media screen and (min-width: 768px) {
     .project-container{
+        background-color: rgb(255, 0, 242);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -94,7 +103,7 @@
         padding: 20px;
         img{
             border-radius: 40px;
-            width: 250px;
+            width: 300px;
             height: 400px;
         }
     
@@ -113,8 +122,8 @@
 
     .author-photo{
         border-radius: 100%;
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         float: right;
         margin-left: 100px;
         -webkit-shape-outside:circle();
@@ -159,20 +168,13 @@
     
     .others-projects img{
         border-radius: 40px;
-        width: 350px;
-        height: 500px;
+        width: 200px;
+        height: 300px;
     }
    
  }
 
-
-
-
-
-
-
-
-
+/*======================================================================992==========================================================================================================================================================================================================================*/
 @media screen and (min-width: 992px) {
    
     .project-container{
@@ -249,7 +251,7 @@
     
     .others-projects img{
         border-radius: 40px;
-        width: 350px;
-        height: 500px;
+        width: 200px;
+        height: 300px;
     }
  }
