--- a/assets/css/src/_header.scss
+++ b/assets/css/src/_header.scss
@@ -57,13 +57,32 @@ body{
 }
 
 .main-menu{
+    margin: 0px 10px;
     text-align: center;
     display: none;
     font-family: $title;
     font-size: 24px;
     background-color: $blue-noir;
     border-radius: 0px 0px 50px 50px;
-    padding: 5px 0px;    
+    padding: 5px 0px;   
+    animation: drop 600ms ease-in-out forwards; 
+    transform-origin: top center;
+
+    @keyframes drop {
+        0% {
+            transform: scaleY(0)
+        }
+        80% {
+            transform: scaleY(1.1)
+        }
+        100% {
+            transform: scaleY(1)
+        }
+        
+    }
+
+
+
     li{
         padding: 5px 0px;
     }
@@ -116,6 +135,7 @@ body{
         display: block;
         border-radius: 0px;
         background-color: transparent;
+        animation: none;
 
     .first-menu a{
         color: $blue-noir;
@@ -128,9 +148,9 @@ body{
     }
     #portfolio:hover .second-menu{
          display: block;
-         transition: 0.6s;
+         transition: 2.6s;
          position:absolute ;
-         margin: 10px 0;
+         padding: 10px 0px;
          left: 50%;
          transform: translate(-50% );
          li{
@@ -138,7 +158,7 @@ body{
              margin: 0;
              a{
                  display: block; 
-                 font-size: 20px;
+                 font-size: 22px;
              }
          }  
     }
@@ -166,6 +186,7 @@ body{
         border-radius: 0px;
         background-color: transparent;
         padding: 20px;
+        animation: none;
     .first-menu a{color: $blue-noir;}
     li{
         display: inline;
