--- a/assets/css/src/_var.scss
+++ b/assets/css/src/_var.scss
@@ -5,5 +5,6 @@ $bg-body: hsla(183, 100%, 32%, 0.26);
 $blue-noir: #122940;
 $blue-fonce: #004F73;
 $bg:#BDE5E7;
+$grey : #6F6F6E;
 $title: 'Montserrat', sans-serif;
 $txt: 'Roboto', sans-serif;
