--- a/assets/css/src/_all-pages.scss
+++ b/assets/css/src/_all-pages.scss
@@ -37,7 +37,7 @@
     min-width: 227px;
     min-height: 204px;
     background-image:
-    linear-gradient(to bottom, rgba(255,255,255,1), rgba(250,218,143,0.4)),
+    linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
     url('./../../img/src/dev.jpg');
     background-size: cover;
     border-radius: 40px;
@@ -45,8 +45,9 @@
     transition: .5s;
     &:hover {
         background-image:
-        linear-gradient(to bottom, rgba(131,127,127,0.87) 60%, rgba(0,0,0,0.68)),
-        url('./../../img/src/dev.jpg');   
+        linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
+        url('./../../img/src/dev.jpg');
+        background-size: cover;
     }
     div.body-card{
         margin:auto;
