--- a/assets/css/src/_all-pages.scss
+++ b/assets/css/src/_all-pages.scss
@@ -57,6 +57,23 @@
         text-align: center;
     }
 }
+.pagination {
+    margin: 20px auto;
+    display: flex;
+    column-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    &:first-child {
+        background-color: $blue-noir !important;
+    }
+    .dot {
+        height: 20px;
+        width: 20px;
+        background-color: $blue-fonce;
+        border-radius: 50%;
+        display: inline-block;
+    }
+}
 /*=============RESPONSIVE========*/
 @media screen and (min-width: 576px) {
     .portfolio {
@@ -87,6 +104,10 @@
             grid-column: span 4;
             min-height: 500px;
         }
+    }
+    .pagination {
+        justify-content: flex-end;
+        padding: 10px 140px;
     }
 }
 @media screen and (min-width: 992px) {
