--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -51,7 +51,7 @@
     display: flex;
     div.body-card{
         margin:auto;
-        color: white;
+        color: rgb(223, 221, 231);
         font-size: 1.25em;
         font-family: $title;
         text-align: center;
