--- a/assets/css/src/_project.scss
+++ b/assets/css/src/_project.scss
@@ -77,32 +77,34 @@
   font-size: 20px;
 }
 
+#splide{
+
 .splide{
-    margin-top: 0px !important;
+  margin-top: 0px !important;
 }
 .splide__slide img {
-    text-align: center !important;
-    border-radius: 40px !important;
-    width: 120px !important;
-    height: 120px !important;
-    display: block;
-    margin: auto;
+  text-align: center !important;
+  border-radius: 40px !important;
+  width: 120px !important;
+  height: 120px !important;
+  display: block;
+  margin: auto;
 }
 
 .splide__slide h2{
-    color:aliceblue !important;
-    font-size: 12px !important; 
-    padding: 0px !important;
-    margin-right: 0px !important;
-    font-family: $txt;
-    text-align:start !important;
-    
+  color:aliceblue !important;
+  font-size: 12px !important; 
+  padding: 0px !important;
+  margin-right: 0px !important;
+  font-family: $txt;
+  text-align:start !important;
+  
 }
 .text-pro:hover{
-  color: $bg !important;
-    cursor: pointer !important;
+color: $bg !important;
+  cursor: pointer !important;
 }
-
+}
 
 /*=============================================MEDIA QUERIES==================================================================================
 =============================================================================================================================================*/
@@ -118,6 +120,34 @@
       #splide{
         margin-top: 50px !important;
         padding: 0 20px !important;
+
+      .splide{
+          margin-top: 0px !important;
+      }
+      .splide__slide img {
+          text-align: center !important;
+          border-radius: 40px !important;
+          width: 120px !important;
+          height: 120px !important;
+          margin: 10px;
+      }
+  
+      .splide__slide h2{
+          color:aliceblue !important;
+          font-size: 14px !important; 
+          position: absolute !important;
+          top: 60% !important;
+          padding: 0px !important;
+          margin-right: 0px !important;
+          font-family: $txt;
+          text-align:start !important;
+          
+      }
+
+      .text-pro:hover{
+        color: $bg !important;
+          cursor: pointer !important;
+    }
     } 
     
     #splide-slide02 , #splide-slide01 , #splide-slide03 ,#splide-slide04,#splide-slide05,#splide-slide06{
@@ -131,32 +161,8 @@
         margin-right: 0px !important;
     }
 
-    .splide{
-        margin-top: 0px !important;
-    }
-    .splide__slide img {
-        text-align: center !important;
-        border-radius: 40px !important;
-        width: 120px !important;
-        height: 120px !important;
-        margin: 10px;
-    }
-
-    .splide__slide h2{
-        color:aliceblue !important;
-        font-size: 14px !important; 
-        position: absolute !important;
-        top: 60% !important;
-        padding: 0px !important;
-        margin-right: 0px !important;
-        font-family: $txt;
-        text-align:start !important;
-        
-    }
-  .text-pro:hover{
-      color: $bg !important;
-        cursor: pointer !important;
-  }
+    
+ 
     }
 
 
@@ -242,6 +248,31 @@
     #splide{
       margin-top: 50px !important;
       padding: 0 50px !important;
+
+      .splide__slide img {
+        border-radius: 40px !important;
+        width:  100% !important;
+        height: 200px !important;
+        background: center url(./../../img/src/dev.jpg) no-repeat;
+        background-size: cover;
+        filter: opacity(0.8);
+        -webkit-filter: opacity(0.8);
+      }
+  
+      .splide__slide h2{
+          color:aliceblue !important;
+          position: absolute !important;
+          top: 65% !important;
+          font-size: 20px !important; 
+          padding: 0px !important;
+          font-family: $txt;
+          text-align: center;
+          
+      }
+    .text-pro:hover{
+        color: $bg !important;
+          cursor: pointer !important;
+    }
   } 
   
   #splide-slide02 , #splide-slide01 , #splide-slide03 ,#splide-slide04,#splide-slide05,#splide-slide06{
@@ -255,30 +286,7 @@
       margin-right: 0px !important;
   }
   
-  .splide__slide img {
-      border-radius: 40px !important;
-      width:  100% !important;
-      height: 200px !important;
-      background: center url(./../../img/src/dev.jpg) no-repeat;
-      background-size: cover;
-      filter: opacity(0.8);
-      -webkit-filter: opacity(0.8);
-    }
-
-    .splide__slide h2{
-        color:aliceblue !important;
-        position: absolute !important;
-        top: 65% !important;
-        font-size: 20px !important; 
-        padding: 0px !important;
-        font-family: $txt;
-        text-align: center;
-        
-    }
-  .text-pro:hover{
-      color: $bg !important;
-        cursor: pointer !important;
-  }
+  
     }
 
 
@@ -362,6 +370,31 @@
   #splide{
     margin-top: 20px !important;
     padding: 0 80px !important;
+
+    .splide__slide img {
+      border-radius: 40px !important;
+      width:  100% !important;
+      height: 200px !important;
+      background: center url(./../../img/src/dev.jpg) no-repeat;
+      background-size: cover;
+      filter: opacity(0.8);
+      -webkit-filter: opacity(0.8);
+    }
+  
+    .splide__slide h2{
+        color:aliceblue !important;
+        position: absolute !important;
+        top: 65% !important;
+        font-size: 22px !important; 
+        padding: 10px !important;
+        font-family: $txt;
+        text-align: center;
+        
+    }
+  .text-pro:hover{
+      color: $bg !important;
+        cursor: pointer !important;
+  }
 } 
 
 #splide-slide02 , #splide-slide01 , #splide-slide03 ,#splide-slide04,#splide-slide05,#splide-slide06{
@@ -375,30 +408,7 @@
     margin-right: 0px !important;
 }
 
-.splide__slide img {
-    border-radius: 40px !important;
-    width:  100% !important;
-    height: 200px !important;
-    background: center url(./../../img/src/dev.jpg) no-repeat;
-    background-size: cover;
-    filter: opacity(0.8);
-    -webkit-filter: opacity(0.8);
-  }
 
-  .splide__slide h2{
-      color:aliceblue !important;
-      position: absolute !important;
-      top: 65% !important;
-      font-size: 22px !important; 
-      padding: 10px !important;
-      font-family: $txt;
-      text-align: center;
-      
-  }
-.text-pro:hover{
-    color: $bg !important;
-      cursor: pointer !important;
-}
   }
 
 /*======================================================================992==========================================================================================================================================================================================================================*/
@@ -480,36 +490,33 @@
   #splide{
     margin-top: 50px !important;
     padding: 0 100px !important;
+
+    .splide__slide img {
+      
+      border-radius: 40px !important;
+      width:  100% !important;
+      height: 200px !important;
+      background: center url(./../../img/src/dev.jpg) no-repeat;
+      background-size: cover;
+      filter: opacity(0.8);
+      -webkit-filter: opacity(0.8);
+    }
+  
+    .splide__slide h2{
+        color:aliceblue !important;
+        position: absolute !important;
+        top: 70% !important;
+        font-size: 26px !important; 
+        font-family: $txt;
+        padding: 10px !important;
+        
+    }
+
+    .text-pro:hover{
+      color: $bg !important;
+      cursor: pointer !important;
+  }
 } 
 
-#splide-slide02 , #splide-slide01 , #splide-slide03 ,#splide-slide04,#splide-slide05,#splide-slide06,#splide-slide07,#splide-slide08{
-    width: 420px !important;
-
-}
-
-  .splide__slide img {
-      
-    border-radius: 40px !important;
-    width:  100% !important;
-    height: 200px !important;
-    background: center url(./../../img/src/dev.jpg) no-repeat;
-    background-size: cover;
-    filter: opacity(0.8);
-    -webkit-filter: opacity(0.8);
-  }
-
-  .splide__slide h2{
-      color:aliceblue !important;
-      position: absolute !important;
-      top: 70% !important;
-      font-size: 26px !important; 
-      padding: 10px !important;
-      
-  }
-.text-pro:hover{
-    color: $bg !important;
-      cursor: pointer !important;
-}
-
-  
+#splide-slide02 , #splide-slide01 , #splide-slide03 ,#splide-slide04,#splide-slide05,#splide-slide06,#splide-slide07,#splide-slide08{width: 420px !important;}  
 }
