ADD link fix balise name for header and nav

--- a/assets/css/src/_all-pages.scss
+++ b/assets/css/src/_all-pages.scss
@@ -55,6 +55,9 @@
         font-size: 1.25em;
         font-family: $title;
         text-align: center;
+        a {
+            color: white;
+        }
     }
 }
 .pagination {
