fix footer + header on all pages

--- a/assets/css/src/_footer.scss
+++ b/assets/css/src/_footer.scss
@@ -4,6 +4,12 @@ div.main {
   border-radius: 0 0 100px 100px;
   transform: translateY(80px);
 }
+div.main2 {
+  height: 15vh;
+  background: #bde5e7;
+  border-radius: 0 0 100px 100px;
+  transform: translateY(80px);
+}
 
 h4 {
   font-size: 2rem;
