add contact page

--- a/assets/css/src/style.scss
+++ b/assets/css/src/style.scss
@@ -1,17 +1,15 @@
-@import 'reset';
-@import 'var';
-@import 'mixins';
-@import 'placeholder';
-@import 'all-pages';
-@import 'header';
-@import 'index';
-@import 'footer';
-@import 'project';
-@import 'index';
-@import 'portfolio-section';
-@import 'mention';
-@import 'cgu';
+@import "reset";
+@import "var";
+@import "mixins";
+@import "placeholder";
+@import "all-pages";
+@import "header";
+@import "index";
+@import "footer";
+@import "project";
+@import "index";
+@import "portfolio-section";
+@import "mention";
+@import "cgu";
 @import "userport";
-
-
-
+@import "contact";
