--- a/assets/css/src/_all-pages.scss
+++ b/assets/css/src/_all-pages.scss
@@ -17,7 +17,6 @@
     background-image:
     linear-gradient(to bottom, rgba(240,174,84,0.3), rgba(240,174,84,0.3)),
     url('./../../img/src/bg-header.jpg');
-    padding: 0 10px;
     border: 10px solid $bg;
     background-size: cover;
     width: 100%;
@@ -51,18 +50,26 @@
     border-radius: 40px;
     display: flex;
     transition: .5s;
+    box-shadow: $grey 10px 10px 10px;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
         url('./../../img/src/dev.jpg');
         background-size: cover;
     }
+    &:hover .body-card {
+        visibility: visible;
+        transform: scale(1);
+    }
     div.body-card{
+        visibility: hidden;
+        transform: scale(0.2);
         margin:auto;
         color: white;
         font-size: 1.25em;
         font-family: $title;
         text-align: center;
+        transition: .5s ease-in-out;
         a {
             color: white;
         }
@@ -79,6 +86,7 @@ div.pagination {
     background-color: $blue-noir !important;
     }
     .dot {
+    cursor: pointer;
     height: 20px;
     width: 20px;
     background-color: #bbb;
@@ -86,6 +94,9 @@ div.pagination {
     display: inline-block;
     margin: auto;
     background-color: $blue-fonce;
+    &:hover {
+        background-color: $grey;
+    }
     }
     p {
     color: $blue-fonce;
