--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -1,6 +1,7 @@
 #splide-index {
     display: flex;
     width: 100%;
+    height: 100%;
     padding: 0 10px;
     img {
         border-radius: 24px 150px 24px 150px;
@@ -151,6 +152,13 @@ article#graph {
     }
 }
 @media screen and (min-width: 768px) {
+    #splide-index {
+        li.splide__slide {
+            h2 {
+                font-size: 2em;
+            }
+        }
+    }
     .portfolio article#dev {
         grid-column: span 6;
     }
@@ -175,6 +183,11 @@ article#graph {
             width : 100%;
             height: auto;
             max-height: 400px;
+        }
+        li.splide__slide {
+            h2 {
+                font-size: 2.5em;
+            }
         }
     }
 }
