--- a/assets/css/src/_project.scss
+++ b/assets/css/src/_project.scss
@@ -101,7 +101,7 @@
   
 }
 .text-pro:hover{
-color: $bg !important;
+  color: $bg !important;
   cursor: pointer !important;
 }
 }
@@ -136,7 +136,8 @@ color: $bg !important;
           color:aliceblue !important;
           font-size: 14px !important; 
           position: absolute !important;
-          top: 60% !important;
+          top: 65% !important;
+          left: 30%;
           padding: 0px !important;
           margin-right: 0px !important;
           font-family: $txt;
